<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_filter">Filter</string>
    <string name="hint_vote_avarage_filter">Média de votos</string>
    <string name="adult_label">Adultos</string>
    <string name="title_favorite">Favoritar</string>
    <string name="title_remove_favorite">Desfavoritar</string>
    <string name="title_retry_images">Recarregar imagens</string>
    <string name="ops">Oops</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_cinema">Cinema</string>
    <string name="title_empty_movies_favorited">Favorite um filme :D</string>
    <string name="title_movies_empty">Nenhum filme encontrado</string>
    <string name="title_remove_filter">Remover Filtros</string>
    <string name="see_more">Ler mais</string>
    <string name="title_trending">Populares</string>

</resources>