<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_filter"
        style="@style/MaterialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vote_avarege"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movies_space"
        android:hint="@string/hint_vote_avarage_filter"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/label_filter" />

    <TextView
        android:id="@+id/adult_labell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movies_space"
        android:text="@string/adult_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_avarege" />

    <Switch
        android:id="@+id/adult_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movies_space"
        app:layout_constraintStart_toEndOf="@+id/adult_labell"
        app:layout_constraintTop_toBottomOf="@+id/vote_avarege" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/genres_chip_group"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/adult_labell"
        android:layout_margin="@dimen/movies_space"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movies_space"
        android:text="@string/title_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>