<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Transitions -->
    <Transition
        android:id="@+id/overViewTransition"
        app:constraintSetEnd="@+id/overViewExpandEnd"
        app:constraintSetStart="@id/overViewExpandStart"
        app:duration="500">
        <OnClick app:targetId="@id/see_more_tv" />
    </Transition>
    <Transition
        android:id="@+id/bannerExpand"
        app:constraintSetEnd="@+id/constraintEnd"
        app:constraintSetStart="@id/constraintStart"
        app:duration="500">
        <OnClick app:targetId="@id/pager" />
    </Transition>
    <Transition
        android:id="@+id/bannerDown"
        app:constraintSetEnd="@+id/transLationEnd"
        app:constraintSetStart="@id/transLationStart"
        app:duration="1000">
        <OnClick app:targetId="@id/pager" />
    </Transition>
    <Transition
        android:id="@+id/bannerReturn"
        app:constraintSetEnd="@+id/bannerReturnEnd"
        app:constraintSetStart="@+id/bannerReturnStart"
        app:duration="1000">
        <OnClick app:targetId="@id/pager" />
    </Transition>


    <ConstraintSet android:id="@+id/bannerReturnStart">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            android:alpha="0"
            android:translationY="-350dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/rating_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/movies_space"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:primaryColor="@color/colorPrimary" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/bannerReturnEnd">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            android:alpha="1"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/followCustomView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            android:layout_marginEnd="@dimen/movies_space"
            android:layout_marginBottom="@dimen/movies_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/banner"
            app:layout_constraintTop_toBottomOf="@id/movie_details">
            <CustomAttribute
                app:attributeName="backgroundColor"
                app:customColorValue="#6200EE" />
            <CustomAttribute
                app:attributeName="text"
                app:customStringValue="@string/title_remove_favorite" />
            <CustomAttribute
                app:attributeName="textColor"
                app:customColorValue="@color/colorWhite" />
        </Constraint>
        <Constraint
            android:id="@+id/rating_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/movies_space"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:primaryColor="@color/colorPrimary" />

    </ConstraintSet>

    <ConstraintSet android:id="@+id/constraintStart">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/constraintEnd">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
        <Constraint
            android:id="@+id/rating_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/movies_space"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:primaryColor="@color/colorPrimary" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/transLationStart">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/transLationEnd">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="100dp"
            android:layout_height="250dp"

            android:translationY="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/returnStart">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:translationY="2000dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/returnEnd">
        <Constraint
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </ConstraintSet>


    <ConstraintSet android:id="@+id/pagerStart">
        <Constraint
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/movies_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/pagerEnd">
        <Constraint
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginEnd="@dimen/movies_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ConstraintSet>


    <ConstraintSet android:id="@+id/overViewExpandStart">
        <Constraint
            android:id="@+id/movie_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/movies_space"
            android:alpha="1"
            android:fontFamily="@font/alfa_slab_one"
            android:textSize="@dimen/text_size_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/movie_name"
            app:layout_constraintStart_toEndOf="@+id/banner"
            tools:text="(2020)" />
        <Constraint
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/movies_space"
            android:alpha="1"
            android:fontFamily="@font/alfa_slab_one"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toTopOf="@+id/banner"
            tools:text="Coringa" />
        <Constraint
            android:id="@+id/movie_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space_medium"
            android:layout_marginEnd="@dimen/movies_space"
            android:alpha="1"
            android:fontFamily="@font/alfa_slab_one"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/movie_name"
            tools:text="Coringa é um filme muito bom que eu gosto" />
        <Constraint
            android:id="@+id/movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            android:layout_marginEnd="@dimen/movies_space"
            android:alpha="1"
            android:fontFamily="@font/alfa_slab_one"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/movie_subtitle"
            tools:text="10/07/2020 (BR)
Guerra, Ação, Drama
1h 31m" />
        <Constraint
            android:id="@+id/followCustomView"
            style="@style/OutlineDeselected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movies_space"
            android:alpha="1"
            android:text="@string/title_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/banner"
            app:layout_constraintTop_toBottomOf="@id/movie_details" />
        <Constraint
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:srcCompat="@tools:sample/backgrounds/scenic" />
        <Constraint
            android:id="@+id/overview_tv"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/movies_space"
            android:layout_marginEnd="@dimen/movies_space"
            android:layout_marginTop="@dimen/movies_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/followCustomView"
            tools:text="asa asa asaasaasaasaasaasaasaasa \n asaasaasaasaasaasa\nasaasaasaasaasa\nasaasaasaasa" />
        <Constraint
            android:id="@+id/see_more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:layout_marginEnd="@dimen/default_title_text_size"
            android:layout_marginTop="@dimen/default_title_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_tv">
            <CustomAttribute
                app:attributeName="text"
                app:customStringValue="@string/see_more"/>
        </Constraint>
        <Constraint
            android:id="@+id/age_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/text_size"
            app:ageview_conrner_radius="2"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent" />
    </ConstraintSet>

    <ConstraintSet
        android:id="@+id/overViewExpandEnd"
        app:deriveConstraintsFrom="@id/overViewExpandStart">
        <Constraint android:id="@+id/banner">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/age_view">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/see_more_tv"
            >
            <Layout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                android:layout_marginBottom="@dimen/movies_space"/>
            <CustomAttribute
                app:attributeName="text"
                app:customStringValue="Ler menos"/>
        </Constraint>
        <Constraint android:id="@+id/followCustomView">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/movie_details">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/movie_subtitle">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/movie_age">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/movie_name">
            <PropertySet android:alpha="0" />
        </Constraint>
        <Constraint android:id="@+id/overview_tv">
            <Layout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/movies_space"
                android:layout_marginEnd="@dimen/movies_space"
                android:layout_marginTop="@dimen/movies_space"
                />
        </Constraint>
    </ConstraintSet>

</MotionScene>